data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1218.wast
;; 9. **Test Description**: Use a `br_table` nested within multiple `loop` constructs, with an index leading to a valid label and another, well outside the nested `loop` depth.    - **Constraint**: It assesses if the `br_table` correctly handles branching within deeply nested loops and manages invalid deep labels.    - **Edge Case Relation**: Tests deep nested control flows mixed with invalid deep target indices.

(assert_invalid
  (module
    (func (param i32)
      (loop
        (loop
          (loop
            (br_table 0 2 5 (local.get 0))
          )
        )
      )
    )
  )
  "unknown label"
)